force-app/main/default/objects/CloudCaller_Call_Backup__c/CloudCaller_Call_Backup__c.object-meta.xml
<CustomObject>
    <label>CloudCaller Call Backup</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>CloudCaller Call Backup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudCaller Calls Backup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>