force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <formula>IF(NOT(ISBLANK(Related_To_Contact__c)),&apos;Contact&apos;,
IF(NOT(ISBLANK(Related_To_Account__c)),&apos;Account&apos;,
IF(NOT(ISBLANK (Related_To_Lead__c)),&apos;Lead&apos;,&apos;Other&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Type</label>
    <type>Text</type>
</CustomField>