force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/CloudCaller_User__c.field-meta.xml
<CustomField>
    <fullName>CloudCaller_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudCaller User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CloudCaller_Calls_Bkp</relationshipName>
    <type>Lookup</type>
</CustomField>