force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Originally_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Originally_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originally Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CloudCaller_Calls_Backups</relationshipName>
    <type>Lookup</type>
</CustomField>