force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Originally_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Originally_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originally Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CloudCaller_Calls_Backups1</relationshipName>
    <type>Lookup</type>
</CustomField>