force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>