force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CloudCaller_Calls_Bkp</relationshipName>
    <type>Lookup</type>
</CustomField>