force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/Related_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>CloudCaller_Calls_Bkp</relationshipName>
    <type>Lookup</type>
</CustomField>