force-app/main/default/objects/CloudCaller_Call_Backup__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <label>RelatedTo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>