force-app/main/default/objects/CloudCaller_Call_Backup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Originally_Created_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>